src- Version 4.19/objects/Product_Rate_Plan__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>This forms tier 2 of the product catalog.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Period__c</fullName>
        <formula>SUBSTITUTE(text(Valid_From_Date__c), &apos;-&apos;, &apos;/&apos;) + &quot; -- &quot; + SUBSTITUTE(text(Valid_To_Date__c), &apos;-&apos;, &apos;/&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Charges__c</fullName>
        <label>No. of Charges</label>
        <summaryForeignKey>Product_Rate_Plan_Charge__c.Product_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <description>most used Rate Plans in the Order</description>
        <inlineHelpText>most used Rate Plans in the Order</inlineHelpText>
        <label>Occurrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Rate Plan</relationshipLabel>
        <relationshipName>ProductRatePlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY() &gt;= Valid_From_Date__c &amp;&amp; (TODAY() &lt;= Valid_To_Date__c || ISBLANK(Valid_To_Date__c)), &quot;Active&quot;, IF(Valid_From_Date__c &gt; TODAY(), &quot;Future&quot; , &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Product Rate Plan</label>
    <nameField>
        <label>Product Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_For_To_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Valid_From_Date__c &gt; Valid_To_Date__c</errorConditionFormula>
        <errorMessage>Valid To Date should be greater than Valid From Date(Product Rate Plan)</errorMessage>
    </validationRules>
</CustomObject>